Add a subsection for the Docker registry

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -373,6 +373,8 @@ Za detaljan opis kako preusmjeravanja tokova u navedenoj skripti rade preporuča
 
 \subsection{Servis za zakazivanje izvođenja i upravljanje radilicama}
 
+\subsection{Dijeljeni registar Docker slika}
+
 \chapter{Vrednovanje}
 
 \chapter{Daljnje dorade}
